@@ -38,6 +38,7 @@ uqm_INSTALL_SHAREDIR='@INSTALL_SHAREDIR@'
 # Exported variables are available from all the Makeinfo files
 # Non-exported files only where build.vars is explicitely included.
 uqm_SOUNDMODULE='@SOUNDMODULE@'
+uqm_OGGVORBIS='@OGGVORBIS@'
 uqm_USE_INTERNAL_MIKMOD='@USE_INTERNAL_MIKMOD@'
 uqm_HAVE_REGEX='@HAVE_REGEX_H_FLAG@'
 uqm_HAVE_OPENGL='@HAVE_OPENGL@'
