@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Allow building without ogg vorbis support (bug #852) - SvdB
 - Reworked SuperMelee fleet loading (fixes bug #823) - SvdB
 - Fixed enemy ships getting recrewed between ecnounters in HyperSpace
   (bug #996) - Alex
